[gd_scene load_steps=3 format=3 uid="uid://b3kbu23fy2cjm"]

[ext_resource type="Script" path="res://Core/Board/board.gd" id="1_m6nev"]
[ext_resource type="PackedScene" uid="uid://2bfvk1qmbvgr" path="res://Core/Board/placement_area.tscn" id="2_thwnt"]

[node name="Board" type="Node2D"]
script = ExtResource("1_m6nev")

[node name="StartPlacementArea" parent="." instance=ExtResource("2_thwnt")]
unique_name_in_owner = true

[node name="StartPlacementArea2" parent="." instance=ExtResource("2_thwnt")]
unique_name_in_owner = true

[node name="StartPlacementArea3" parent="." instance=ExtResource("2_thwnt")]
unique_name_in_owner = true

[node name="EndPlacementArea" parent="." instance=ExtResource("2_thwnt")]
unique_name_in_owner = true

[node name="EndPlacementArea2" parent="." instance=ExtResource("2_thwnt")]
unique_name_in_owner = true

[node name="EndPlacementArea3" parent="." instance=ExtResource("2_thwnt")]
unique_name_in_owner = true

[node name="Dominoes" type="Node2D" parent="."]
unique_name_in_owner = true
